env-sba/src/main/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: env-sba
  namespace: env-sba
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: env-sba
  template:
    metadata:
      name: env-sba
      labels:
        app.kubernetes.io/name: env-sba
    spec:
      containers:
        - name: env-sba
          image: 192.168.0.109:5000/env-sba:latest
      serviceAccountName: env-sba-sa
