env-sba/src/main/k8s/deployment-service.yml
apiVersion: v1
kind: Service
metadata:
  name: env-sba
  namespace: env-sba
  labels:
    sba-client: "true"
    user.name: env-sba
    user.password: env-sba
    management.port: "7081"
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: env-sba
  ports:
    - nodePort: 30808
      port: 8081
